# gciMock

./: .gitignore  CMakeLists.txt  format-code.sh  readme.md
examples/pty/: CMakeLists.txt  pty.cpp
gtests/: CMakeLists.txt  gtest-arduino.cpp  gtest-serial.cpp  main-gtest.cpp
include/: Arduino.h  Serial.hpp  Wire.h  mock_arduino.hpp  mock_serial.hpp  mock_servo.hpp  mock_spi.hpp  mock_wire.hpp
src/: Arduino.cpp  Arduino.h  SPI.cpp  SPI.h  Servo.cpp  Servo.h  Wire.cpp  Wire.h  mock_serial.cpp  mock_serial.hpp
